--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.25",
     "react": "17.0.1",
     "react-dom": "17.0.1",
