--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
             "dom",
             "es2015"
         ],
-        // "checkJs": false,
+        "checkJs": false,
         "jsx": "react-jsx"
     }
 }
