--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@types/react-router-dom": "5.3.3",
+    "@types/recoil": "0.0.9",
     "@types/styled-components": "5.1.25",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "recoil": "0.1.2",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
